# torch_rs_playground

./: .gitignore  main.py  pyproject.toml
.github/workflows/: CI.yml
rust/: Cargo.toml
rust/src/: lib.rs
src/tests/: test_all.py
src/torchrdit_rs/: __init__.py  wrap.py
