[build-system]
requires = ["maturin>=1.9,<2.0", "torch>=2.0.0", "numpy>=2.0.0"]
build-backend = "maturin"

[project]
name = "torchrdit_rs"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "torch>=2.7.1",
    "numpy>=2.3.1",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
